--- a/MYProject/.project
+++ b/MYProject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SomeProject</name>
+	<name>MYProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
